--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -1,5 +1,5 @@
 html, body {
-    background-color : #2d313a;
+    /*background-color : #2d313a;*/
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
